Added cross-platforming: 1. Compilation under several platforms using build.sh 2. Linux build support

--- a/scripts/Makefile.osx
+++ b/scripts/Makefile.osx
@@ -1,9 +1,11 @@
+PROJECT_DIR=..
+
 all: install clear
 
 install:
-	g++ -std=c++14 -I ./inc -c ./src/*
+	g++ -std=c++14 -I $(PROJECT_DIR)/inc -c $(PROJECT_DIR)/src/*
 	g++ *.o -o  sfml-app /usr/local/lib/libsfml-graphics.dylib /usr/local/lib/libsfml-window.dylib /usr/local/lib/libsfml-system.dylib  /usr/local/lib/libsfml-audio.2.5.1.dylib /usr/local/lib/libsfml-audio.2.5.dylib /usr/local/lib/libsfml-audio.dylib
 clear:
 	rm -rf *.o *.hpp.gch
 clean: clear
-	rm -rf sfml-app
+	rm -rf $(PROJECT_DIR)/sfml-app
