--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 set(
 	CMAKE_CXX_FLAGS
-	"${CMAKE_CXX_FLAGS}\
-	-Wall\
-	-Wextra\
-	-Wpedantic\
-	-Wshadow\
-	-Wundef\
-	-Wno-missing-field-initializers"
+	"${CMAKE_CXX_FLAGS}	-Wall"
 )
 
 set(PROJECT_NAME "hinkeller")
